--- a/src/main/resources/view/board.fxml
+++ b/src/main/resources/view/board.fxml
@@ -1,56 +1,142 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.RadioButton?>
+<?import javafx.scene.control.Slider?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.FlowPane?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.shape.Rectangle?>
+<?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="900.0" stylesheets="@menuStyle.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <AnchorPane layoutX="-12.0" prefHeight="614.0" prefWidth="919.0" styleClass="background">
+      <StackPane prefHeight="614.0" prefWidth="919.0">
          <children>
-            <Text layoutX="155.0" layoutY="75.0" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-size: 85;" styleClass="titleText" text="Memory    Shape" wrappingWidth="768.22900390625" />
-            <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#45aca5" height="45.0" layoutX="485.0" layoutY="33.0" rotate="45.0" stroke="BLACK" strokeType="INSIDE" styleClass="logo" width="45.0" />
-            <ImageView fitHeight="47.0" fitWidth="56.0" layoutX="14.0" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@images/icons8-red-heart-96.png" />
-               </image>
-            </ImageView>
-            <ImageView fitHeight="47.0" fitWidth="63.0" layoutX="51.0" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@images/icons8-red-heart-96.png" />
-               </image>
-            </ImageView>
-            <ImageView fitHeight="47.0" fitWidth="65.0" layoutX="89.0" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@images/icons8-red-heart-96.png" />
-               </image>
-            </ImageView>
-            <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#3357cc" height="14.0" layoutX="824.0" layoutY="7.0" stroke="BLACK" strokeType="INSIDE" styleClass="optionsButton" width="56.0" />
-            <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#3254cd" height="14.0" layoutX="824.0" layoutY="31.0" stroke="BLACK" strokeType="INSIDE" styleClass="optionsRect" width="56.0" />
-            <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#3360cc" height="14.0" layoutX="824.0" layoutY="55.0" stroke="BLACK" strokeType="INSIDE" styleClass="optionsRect" width="56.0" />
-            <AnchorPane layoutX="65.0" layoutY="121.0" prefHeight="429.0" prefWidth="793.0" styleClass="boardAnchorPane">
+            <AnchorPane fx:id="pausedAnchorPane" prefHeight="73.0" prefWidth="263.0" style="-fx-background-color: rgba(0, 0, 0, 0.65)rgba(0, 0, 0, 0.65);">
                <children>
-                  <AnchorPane layoutX="300.0" layoutY="21.0" prefHeight="142.0" prefWidth="179.0" styleClass="displaySelectedCard">
+                  <Pane fx:id="resumeButton" layoutX="317.0" layoutY="201.0" onMouseClicked="#resumeButtonPressed" prefHeight="73.0" prefWidth="263.0" styleClass="menuButton">
                      <children>
-                        <ImageView fx:id="selectedCard" fitHeight="129.0" fitWidth="151.0" layoutX="25.0" layoutY="7.0" pickOnBounds="true" preserveRatio="true">
-                           <image>
-                              <Image url="@images/shapes/YELLOWCIRCLE.png" />
-                           </image>
-                        </ImageView>
+                        <Text fill="WHITE" layoutX="72.0" layoutY="48.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="whiteMenuText" text="Resume" />
+                     </children>
+                  </Pane>
+                  <Pane layoutX="317.0" layoutY="378.0" onMouseClicked="#quitToMenuPressed" prefHeight="73.0" prefWidth="263.0" styleClass="menuButton">
+                     <children>
+                        <Text fill="WHITE" layoutX="18.0" layoutY="45.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="whiteMenuText" text=" Quit to menu " />
+                     </children>
+                  </Pane>
+                  <Pane layoutX="317.0" layoutY="467.0" onMouseClicked="#quitButtonPressed" prefHeight="73.0" prefWidth="263.0" styleClass="menuButton">
+                     <children>
+                        <Text fill="WHITE" layoutX="96.0" layoutY="45.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="whiteMenuText" text="Quit" />
+                     </children>
+                  </Pane>
+                  <Pane layoutX="317.0" layoutY="288.0" onMouseClicked="#optionsButtonPressed" prefHeight="73.0" prefWidth="263.0" styleClass="menuButton">
+                     <children>
+                        <Text fill="WHITE" layoutX="66.0" layoutY="48.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="whiteMenuText" text="Options" />
+                     </children>
+                  </Pane>
+                  <Text layoutX="158.0" layoutY="160.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="titleText" text="Game Paused!" wrappingWidth="685.22900390625" />
+               </children>
+            </AnchorPane>
+            <AnchorPane fx:id="soundOptionsAnchorPane" prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: rgba(0, 0, 0, 0.65)rgba(0, 0, 0, 0.65);" styleClass="background">
+               <children>
+                  <Pane layoutX="161.0" layoutY="190.0" prefHeight="337.0" prefWidth="588.0" styleClass="boardAnchorPane">
+                     <children>
+                        <Slider layoutX="58.0" layoutY="99.0" majorTickUnit="10.0" prefHeight="16.0" prefWidth="473.0" showTickLabels="true" showTickMarks="true" value="10.0" />
+                        <Text fill="WHITE" layoutX="31.0" layoutY="59.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Regulate the volume:">
+                           <font>
+                              <Font name="Baloo Bhai" size="18.0" />
+                           </font>
+                        </Text>
+                        <RadioButton layoutX="76.0" layoutY="169.0" mnemonicParsing="false" text="ON" textFill="WHITE">
+                           <font>
+                              <Font name="Baloo Bhai" size="14.0" />
+                           </font>
+                        </RadioButton>
+                        <RadioButton layoutX="76.0" layoutY="206.0" mnemonicParsing="false" text="OFF" textFill="WHITE">
+                           <font>
+                              <Font name="Baloo Bhai" size="14.0" />
+                           </font>
+                        </RadioButton>
+                     </children>
+                  </Pane>
+                  <Text layoutX="125.0" layoutY="89.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="titleText" text="Sound Options!" />
+                  <ImageView fitHeight="69.0" fitWidth="72.0" layoutX="38.0" layoutY="527.0" onMouseClicked="#backButtonPressed" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@images/icons8-izquierda-círculo-64.png" />
+                     </image>
+                  </ImageView>
+               </children>
+            </AnchorPane>
+            <AnchorPane fx:id="gameOverAnchorPane" prefHeight="614.0" prefWidth="915.0" style="-fx-background-color: rgba(0, 0, 0, 0.65)rgba(0, 0, 0, 0.65);">
+               <children>
+                  <Pane layoutX="306.0" layoutY="431.0" onMouseClicked="#mainMenuButtonPressed" prefHeight="73.0" prefWidth="263.0" styleClass="menuButton">
+                     <children>
+                        <Text fill="WHITE" layoutX="43.0" layoutY="45.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="whiteMenuText" text="Main Menu" />
+                     </children>
+                  </Pane>
+                  <Pane layoutX="306.0" layoutY="331.0" onMouseClicked="#newGameButtonPressed" prefHeight="73.0" prefWidth="263.0" styleClass="menuButton">
+                     <children>
+                        <Text fill="WHITE" layoutX="45.0" layoutY="45.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="whiteMenuText" text="New Game" />
+                     </children>
+                  </Pane>
+                  <Text layoutX="170.0" layoutY="131.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="titleText" text="Game Over!" />
+                  <Pane layoutX="269.0" layoutY="150.0" prefHeight="167.0" prefWidth="342.0" style="-fx-background-color: grey; -fx-background-color: rgba(0, 0, 0, 0.45)rgba(0, 0, 0, 0.45);">
+                     <children>
+                        <Label fx:id="gameOverLabel" layoutY="-2.0" prefHeight="167.0" prefWidth="342.0" styleClass="outline" textAlignment="CENTER" textFill="WHITE" wrapText="true" />
+                     </children>
+                  </Pane>
+               </children>
+            </AnchorPane>
+            <AnchorPane fx:id="boardAnchorPane" prefHeight="614.0" prefWidth="919.0" styleClass="background">
+               <children>
+                  <Text layoutX="155.0" layoutY="75.0" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-size: 85;" styleClass="titleText" text="Memory    Shape" wrappingWidth="768.22900390625" />
+                  <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#45aca5" height="45.0" layoutX="485.0" layoutY="33.0" rotate="45.0" stroke="BLACK" strokeType="INSIDE" styleClass="logo" width="45.0" />
+                  <ImageView fx:id="imageLife3" fitHeight="47.0" fitWidth="56.0" layoutX="14.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@images/icons8-red-heart-96.png" />
+                     </image>
+                  </ImageView>
+                  <ImageView fx:id="imageLife2" fitHeight="47.0" fitWidth="63.0" layoutX="51.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@images/icons8-red-heart-96.png" />
+                     </image>
+                  </ImageView>
+                  <ImageView fx:id="imageLife1" fitHeight="47.0" fitWidth="65.0" layoutX="89.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@images/icons8-red-heart-96.png" />
+                     </image>
+                  </ImageView>
+                  <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#3357cc" height="14.0" layoutX="824.0" layoutY="7.0" stroke="BLACK" strokeType="INSIDE" styleClass="optionsButton" width="56.0" />
+                  <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#3254cd" height="14.0" layoutX="824.0" layoutY="31.0" stroke="BLACK" strokeType="INSIDE" styleClass="optionsRect" width="56.0" />
+                  <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#3360cc" height="14.0" layoutX="824.0" layoutY="55.0" stroke="BLACK" strokeType="INSIDE" styleClass="optionsRect" width="56.0" />
+                  <AnchorPane layoutX="65.0" layoutY="121.0" prefHeight="429.0" prefWidth="793.0" styleClass="boardAnchorPane">
+                     <children>
+                        <AnchorPane layoutX="313.0" layoutY="21.0" prefHeight="142.0" prefWidth="142.0" styleClass="displaySelectedCard">
+                           <children>
+                              <ImageView fx:id="selectedCard" fitHeight="129.0" fitWidth="151.0" layoutX="7.0" layoutY="7.0" pickOnBounds="true" preserveRatio="true">
+                                 <image>
+                                    <Image url="@images/shapes/YELLOWCIRCLE.png" />
+                                 </image>
+                              </ImageView>
+                           </children>
+                        </AnchorPane>
+                        <FlowPane fx:id="flowPane" alignment="CENTER" hgap="10.0" layoutX="3.0" layoutY="215.0" prefHeight="212.0" prefWidth="787.0" vgap="10.0">
+                           <padding>
+                              <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                           </padding>
+                        </FlowPane>
                      </children>
                   </AnchorPane>
-                  <FlowPane fx:id="flowPane" alignment="CENTER" hgap="10.0" layoutX="3.0" layoutY="215.0" prefHeight="212.0" prefWidth="787.0" vgap="10.0">
-                     <padding>
-                        <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
-                     </padding>
-                  </FlowPane>
+                  <Pane fx:id="options" layoutX="819.0" layoutY="3.0" onMouseClicked="#pausedButtonPressed" prefHeight="73.0" prefWidth="64.0" />
                </children>
             </AnchorPane>
          </children>
-      </AnchorPane>
+      </StackPane>
    </children>
 </AnchorPane>
