--- a/src/main/resources/view/menu.fxml
+++ b/src/main/resources/view/menu.fxml
@@ -1,62 +1,224 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.RadioButton?>
+<?import javafx.scene.control.Slider?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.FlowPane?>
 <?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.StackPane?>
+<?import javafx.scene.shape.Line?>
 <?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
 <AnchorPane prefHeight="600.0" prefWidth="900.0" stylesheets="@menuStyle.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <AnchorPane layoutY="1.0" prefHeight="200.0" prefWidth="200.0" styleClass="background" AnchorPane.bottomAnchor="-1.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="1.0">
+      <StackPane layoutX="-3.0" prefHeight="600.0" prefWidth="900.0">
          <children>
-            <Pane fx:id="playButton" layoutX="250.0" layoutY="207.0" onMouseClicked="#startButtonPressed" prefHeight="60.0" prefWidth="400.0" styleClass="menuButton" AnchorPane.leftAnchor="250.0" AnchorPane.rightAnchor="250.0">
+            <AnchorPane fx:id="soundOptionsPane" prefHeight="200.0" prefWidth="200.0" styleClass="background">
                <children>
-                  <Label alignment="CENTER" layoutX="132.0" layoutY="-2.0" prefHeight="40.0" prefWidth="137.0" styleClass="whiteMenuText" text="Start" textAlignment="CENTER">
-                     <font>
-                        <Font name="Baloo Bhai" size="30.0" />
-                     </font></Label>
+                  <Text layoutX="130.0" layoutY="165.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="titleText" text="Sound Options!" />
+                  <Pane layoutX="164.0" layoutY="217.0" prefHeight="337.0" prefWidth="588.0" styleClass="boardAnchorPane">
+                     <children>
+                        <Slider layoutX="74.0" layoutY="122.0" majorTickUnit="10.0" prefHeight="15.0" prefWidth="440.0" showTickLabels="true" showTickMarks="true" value="10.0" />
+                        <Text fill="WHITE" layoutX="40.0" layoutY="76.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Regulate the volume:">
+                           <font>
+                              <Font name="Baloo Bhai" size="18.0" />
+                           </font>
+                        </Text>
+                        <RadioButton layoutX="102.0" layoutY="189.0" mnemonicParsing="false" text="ON" textFill="WHITE">
+                           <font>
+                              <Font name="Baloo Bhai" size="14.0" />
+                           </font>
+                        </RadioButton>
+                        <RadioButton layoutX="102.0" layoutY="224.0" mnemonicParsing="false" text="OFF" textFill="WHITE">
+                           <font>
+                              <Font name="Baloo Bhai" size="14.0" />
+                           </font>
+                        </RadioButton>
+                     </children>
+                  </Pane>
+                  <ImageView fx:id="optionsBackImage" fitHeight="69.0" fitWidth="72.0" layoutX="29.0" layoutY="580.0" onMouseClicked="#backButtonPressed" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@images/icons8-izquierda-círculo-64.png" />
+                     </image>
+                  </ImageView>
                </children>
-            </Pane>
-            <Pane fx:id="exitButton" layoutX="463.0" layoutY="461.0" prefHeight="60.0" prefWidth="187.0" styleClass="menuButton">
+            </AnchorPane>
+            <AnchorPane fx:id="leaderboardAnchorPane" prefHeight="200.0" prefWidth="200.0" styleClass="background">
                <children>
-                  <Label alignment="CENTER" layoutX="25.0" layoutY="-1.0" prefHeight="40.0" prefWidth="137.0" styleClass="whiteMenuText" text="Exit" textAlignment="CENTER">
-                     <font>
-                        <Font name="Baloo Bhai" size="30.0" />
-                     </font>
-                  </Label>
+                  <Text layoutX="210.0" layoutY="105.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="titleText" text="Highscores" wrappingWidth="563.22900390625" />
+                  <Rectangle arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="51.0" layoutX="118.0" layoutY="50.0" rotate="45.0" stroke="BLACK" strokeType="INSIDE" styleClass="logo" width="51.0" />
+                  <Rectangle arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="51.0" layoutX="748.0" layoutY="50.0" rotate="45.0" stroke="BLACK" strokeType="INSIDE" styleClass="logo" width="51.0" />
+                  <AnchorPane layoutX="107.0" layoutY="141.0" prefHeight="432.0" prefWidth="685.0" styleClass="boardAnchorPane">
+                     <children>
+                        <Pane layoutX="17.0" layoutY="14.0" prefHeight="39.0" prefWidth="669.0" styleClass="buttonMode">
+                           <children>
+                              <Text layoutX="14.0" layoutY="24.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Position">
+                                 <font>
+                                    <Font name="Baloo Bhai" size="13.0" />
+                                 </font>
+                              </Text>
+                              <Text layoutX="96.0" layoutY="24.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Name">
+                                 <font>
+                                    <Font name="Baloo Bhai" size="13.0" />
+                                 </font>
+                              </Text>
+                              <Text layoutX="285.0" layoutY="24.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Mode">
+                                 <font>
+                                    <Font name="Baloo Bhai" size="13.0" />
+                                 </font>
+                              </Text>
+                              <Text layoutX="475.0" layoutY="23.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Score">
+                                 <font>
+                                    <Font name="Baloo Bhai" size="13.0" />
+                                 </font>
+                              </Text>
+                              <Line endX="2.27099609375" endY="25.0" layoutX="76.0" layoutY="14.0" rotate="180.0" startX="2.27099609375" startY="-13.760009765625" />
+                              <Line endX="100.0" endY="19.0" layoutX="168.0" layoutY="21.0" rotate="180.0" startX="100.0" startY="-20.0" />
+                              <Line endX="-9.72900390625" endY="-14.0" layoutX="467.0" layoutY="15.0" startX="-9.72900390625" startY="25.0" />
+                           </children>
+                        </Pane>
+                        <FlowPane layoutY="65.0" prefHeight="465.0" prefWidth="702.0" />
+                     </children>
+                  </AnchorPane>
+                  <ImageView fx:id="backImage" fitHeight="69.0" fitWidth="72.0" layoutX="24.0" layoutY="588.0" onMouseClicked="#backButtonPressed" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@images/icons8-izquierda-círculo-64.png" />
+                     </image>
+                  </ImageView>
                </children>
-            </Pane>
-            <Pane fx:id="optionsButton" layoutX="250.0" layoutY="461.0" prefHeight="60.0" prefWidth="187.0" styleClass="menuButton">
+            </AnchorPane>
+            <AnchorPane fx:id="playerNameAnchorPane" prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: rgba(0, 0, 0, 0.65)rgba(0, 0, 0, 0.65);">
                <children>
-                  <Label alignment="CENTER" layoutX="29.0" layoutY="-1.0" prefHeight="40.0" prefWidth="137.0" styleClass="whiteMenuText" text="Options" textAlignment="CENTER">
-                     <font>
-                        <Font name="Baloo Bhai" size="30.0" />
-                     </font>
-                  </Label>
+                  <Pane layoutX="241.0" layoutY="197.0" prefHeight="253.0" prefWidth="456.0" style="-fx-background-color: grey; -fx-background-color: rgba(0, 0, 0, 0.45)rgba(0, 0, 0, 0.45); -fx-background-radius: 20;">
+                     <opaqueInsets>
+                        <Insets />
+                     </opaqueInsets>
+                     <children>
+                        <Text fill="WHITE" layoutX="34.0" layoutY="74.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Enter your name:" wrappingWidth="261.22900390625">
+                           <font>
+                              <Font name="Baloo Bhai" size="24.0" />
+                           </font>
+                        </Text>
+                        <TextField layoutX="34.0" layoutY="100.0" prefHeight="64.0" prefWidth="325.0" />
+                     </children>
+                  </Pane>
+                  <ImageView fitHeight="69.0" fitWidth="72.0" layoutX="24.0" layoutY="588.0" onMouseClicked="#backButtonPressed" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@images/icons8-izquierda-círculo-64.png" />
+                     </image>
+                  </ImageView>
                </children>
-            </Pane>
-            <Pane fx:id="leaderboardButton" layoutX="250.0" layoutY="379.0" prefHeight="60.0" prefWidth="400.0" styleClass="menuButton">
+            </AnchorPane>
+            <AnchorPane fx:id="modeAnchorPane">
                <children>
-                  <Label alignment="CENTER" layoutX="73.0" layoutY="-1.0" prefHeight="63.0" prefWidth="254.0" styleClass="whiteMenuText" text="Leaderboard" textAlignment="CENTER">
-                     <font>
-                        <Font name="Baloo Bhai" size="30.0" />
-                     </font>
-                  </Label>
+                  <AnchorPane layoutX="91.0" layoutY="133.0" prefHeight="432.0" prefWidth="734.0" styleClass="boardAnchorPane">
+                     <children>
+                        <Text fill="WHITE" layoutX="311.0" layoutY="59.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="modeText" text="Mode">
+                           <font>
+                              <Font size="18.0" />
+                           </font>
+                        </Text>
+                        <Pane layoutX="36.0" layoutY="105.0" prefHeight="84.0" prefWidth="190.0" styleClass="buttonMode">
+                           <children>
+                              <Text layoutX="16.0" layoutY="51.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="whiteMenuText" text="Standard ">
+                                 <font>
+                                    <Font size="10.0" />
+                                 </font>
+                              </Text>
+                           </children>
+                        </Pane>
+                        <Pane layoutX="278.0" layoutY="105.0" prefHeight="84.0" prefWidth="190.0" styleClass="buttonMode">
+                           <children>
+                              <Text layoutX="39.0" layoutY="51.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="whiteMenuText" text="Frenzy">
+                                 <font>
+                                    <Font size="8.0" />
+                                 </font>
+                              </Text>
+                           </children>
+                        </Pane>
+                        <Text fill="WHITE" layoutX="300.0" layoutY="259.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="modeText" text="Player">
+                           <font>
+                              <Font size="24.0" />
+                           </font>
+                        </Text>
+                        <Pane fx:id="newPlayerButton" layoutX="255.0" layoutY="296.0" onMouseClicked="#newPlayerButtonPressed" prefHeight="72.0" prefWidth="254.0" styleClass="buttonMode">
+                           <children>
+                              <Text layoutX="35.0" layoutY="48.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="whiteMenuText" text="New Player" />
+                           </children>
+                        </Pane>
+                        <Pane layoutX="514.0" layoutY="105.0" prefHeight="84.0" prefWidth="190.0" styleClass="buttonMode">
+                           <children>
+                              <Text layoutX="15.0" layoutY="51.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="whiteMenuText" text="Sequence" />
+                           </children>
+                        </Pane>
+                     </children>
+                  </AnchorPane>
+                  <AnchorPane layoutX="52.0" layoutY="528.0" prefHeight="108.0" prefWidth="788.0">
+                     <children>
+                        <Pane fx:id="modeBackButton" layoutX="69.0" layoutY="18.0" onMouseClicked="#backButtonPressed" prefHeight="72.0" prefWidth="112.0" style="-fx-background-color: red;" styleClass="backForwardButton">
+                           <children>
+                              <Text layoutX="12.0" layoutY="49.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="backForwardText" text="Back" />
+                           </children>
+                        </Pane>
+                        <Pane fx:id="modeStartButton" layoutX="626.0" layoutY="18.0" onMouseClicked="#modeStartButtonPressed" prefHeight="72.0" prefWidth="112.0" style="-fx-background-color: #67DD6C;" styleClass="backForwardButton">
+                           <children>
+                              <Text layoutX="10.0" layoutY="46.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="backForwardText" text="Start" />
+                           </children>
+                        </Pane>
+                     </children>
+                  </AnchorPane>
                </children>
-            </Pane>
-            <Pane fx:id="customButton" layoutX="250.0" layoutY="293.0" prefHeight="60.0" prefWidth="400.0" styleClass="menuButton">
+            </AnchorPane>
+            <AnchorPane fx:id="menuAnchorPane" styleClass="background">
                <children>
-                  <Label alignment="CENTER" layoutX="132.0" layoutY="-1.0" prefHeight="40.0" prefWidth="137.0" styleClass="whiteMenuText" text="Custom" textAlignment="CENTER">
-                     <font>
-                        <Font name="Baloo Bhai" size="30.0" />
-                     </font>
-                  </Label>
+                  <Pane fx:id="playButton" layoutX="250.0" layoutY="219.0" onMouseClicked="#startButtonPressed" prefHeight="60.0" prefWidth="400.0" styleClass="menuButton">
+                     <children>
+                        <Label alignment="CENTER" layoutX="132.0" layoutY="6.0" prefHeight="40.0" prefWidth="137.0" style="-fx-text-fill: white;" styleClass="whiteMenuText" text="Start" textAlignment="CENTER">
+                           <font>
+                              <Font name="Baloo Bhai" size="36.0" />
+                           </font>
+                        </Label>
+                     </children>
+                  </Pane>
+                  <Pane fx:id="exitButton" layoutX="463.0" layoutY="438.0" onMouseClicked="#exitButtonPressed" prefHeight="60.0" prefWidth="187.0" styleClass="menuButton">
+                     <children>
+                        <Label alignment="CENTER" layoutX="25.0" layoutY="6.0" prefHeight="40.0" prefWidth="137.0" style="-fx-text-fill: white;" styleClass="whiteMenuText" text="Exit" textAlignment="CENTER">
+                           <font>
+                              <Font name="Baloo Bhai" size="30.0" />
+                           </font>
+                        </Label>
+                     </children>
+                  </Pane>
+                  <Pane fx:id="optionsButton" layoutX="250.0" layoutY="438.0" onMouseClicked="#optionsButtonPressed" prefHeight="60.0" prefWidth="187.0" styleClass="menuButton">
+                     <children>
+                        <Label alignment="CENTER" layoutX="25.0" layoutY="6.0" prefHeight="40.0" prefWidth="137.0" style="-fx-text-fill: white;" styleClass="whiteMenuText" text="Options" textAlignment="CENTER">
+                           <font>
+                              <Font name="Baloo Bhai" size="30.0" />
+                           </font>
+                        </Label>
+                     </children>
+                  </Pane>
+                  <Pane fx:id="leaderboardButton" layoutX="250.0" layoutY="327.0" onMouseClicked="#leaderboardButtonPressed" prefHeight="60.0" prefWidth="400.0" styleClass="menuButton">
+                     <children>
+                        <Label alignment="CENTER" layoutX="73.0" layoutY="-1.0" prefHeight="63.0" prefWidth="254.0" style="-fx-text-fill: white;" styleClass="whiteMenuText" text="Leaderboard" textAlignment="CENTER">
+                           <font>
+                              <Font name="Baloo Bhai" size="30.0" />
+                           </font>
+                        </Label>
+                     </children>
+                  </Pane>
+                  <Text layoutX="101.0" layoutY="106.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="titleText" text="Memory    Shape" wrappingWidth="815.22900390625" />
+                  <Rectangle arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="51.0" layoutX="470.0" layoutY="59.0" rotate="45.0" stroke="BLACK" strokeType="INSIDE" styleClass="logo" width="51.0" />
                </children>
-            </Pane>
-            <Text layoutX="62.0" layoutY="126.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="titleText" text="Memory    Shape" wrappingWidth="815.22900390625" />
-            <Rectangle arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="51.0" layoutX="438.0" layoutY="79.0" rotate="45.0" stroke="BLACK" strokeType="INSIDE" styleClass="logo" width="51.0" />
-         </children></AnchorPane>
+            </AnchorPane>
+         </children>
+      </StackPane>
    </children>
 </AnchorPane>
