--- a/src/main/resources/view/menuStyle.css
+++ b/src/main/resources/view/menuStyle.css
@@ -11,18 +11,21 @@
     -fx-background-size: 100% 100%;
 }
 
-.backgroundBoard{
-    -fx-background-image: url(images/background3.jpg);
-    -fx-background-size: 100% 100%;
-}
+
 
 .whiteMenuText{
-    -fx-text-fill:white;
+    -fx-text-fill: white;
     -fx-font-size: 36;
     -fx-font-family:"Baloo Bhai";
     -fx-effect: dropshadow(gaussian, rgba(0, 0, 0, 0.3), 10, 0.3, 0.0, 4);
 }
 
+.modeText{
+  -fx-text-fill: #ffffff;
+  -fx-font-size: 56;
+  -fx-font-family:"Baloo Bhai";
+  -fx-effect: dropshadow(gaussian, rgba(0, 0, 0, 0.3), 10, 0.3, 0.0, 4);
+}
 
 .boardAnchorPane{
    -fx-background-color: #3254CD;
@@ -85,6 +88,48 @@ Har ingen hover effect
 
 }
 
+.buttonMode{
+  -fx-background-color: #ffffff;
+  -fx-background-radius:10;
+  -fx-effect: dropshadow(gaussian, rgba(0, 0, 0, 0.3), 10, 0.3, 0.0, 4);
+}
+
+
+.buttonMode:hover{
+ -fx-background-color:#E0FFFF;
+}
+
+.buttonMode:pressed{
+ -fx-background-color:#45ACA5;
+}
+
+
+
+.backForwardButton{
+  -fx-background-radius:25;
+  -fx-effect: dropshadow(gaussian, rgba(0, 0, 0, 0.3), 10, 0.3, 0.0, 4);
+
+}
+
+.backForwardButton:hover{
+ -fx-padding: 10px 24px
+}
+
+.backForwardButton:pressed{
+  -fx-background-color:#8B0000;
+}
+
+.backForwardText{
+ -fx-text-fill:#3254CD;
+ -fx-font-size: 40;
+ -fx-font-family :"Baloo Bhai";
+ -fx-effect: dropshadow(gaussian, rgba(0, 0, 0, 0.3), 10, 0.3, 0.0, 4);
+ -fx-stroke: #ffffff;
+ -fx-stroke-width:3;
+ -fx-fill: #3254CD;
+}
+
+
 
 
 .outline.logoText .text{
@@ -127,4 +172,23 @@ Har ingen hover effect
 
 .optionsButton:pressed{
   -fx-background-color:#2D4BB8;
+}
+
+.transparentBackground{
+ -fx-background-color: rgba(0, 0, 0, 0.75);
+}
+
+.label{
+  -fx-text-fill: #3254CD;
+  -fx-font-size: 28;
+  -fx-font-family:"Baloo Bhai";
+  -fx-effect: dropshadow(gaussian, rgba(0, 0, 0, 0.3), 10, 0.3, 0.0, 4);
+
+}
+
+
+.outline.label .text {
+    -fx-fill: #3254CD ;
+    -fx-stroke: #ffffff;
+    -fx-stroke-width: 2px;
 }
